[metadata]
name = lvmsurveysim
version = 0.9.0a
author = José Sánchez-Gallego
author_email = gallegoj@uw.edu
description = LVM simulation survey scheduling
url = https://github.com/sdss/lvmscheduler
project_urls =
    Repository = https://github.com/sdss/lvmscheduler
long_description = file: README.md
long_description_content_type = text/markdown
keywords = astronomy, software
license = BSD 3-Clause License
license_file = LICENSE.md
classifiers =
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Topic :: Documentation :: Sphinx
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
python_requires = >=3.7
packages = find:
package_dir =
    = python
install_requires =
    sdssdb>=0.6.1
    ipython>=6.2.0
    numpy>=1.11.2
    astropy>=1.2.1
    matplotlib>=1.5.3
    PyYAML>=5.1
    healpy>=1.12.8
    astropy_healpix>=0.6
    astral==2.2
    spherical_geometry>=1.2.18
    skyfield>=1.31
    peewee>=3.14
    psycopg2-binary
    pandas
    fastapi
    uvicorn
scripts =
    bin/tileLVM
    bin/test_atomic_sched
    bin/lvm_sim

[options.packages.find]
where =
    python


[options.extras_require]
dev =
    %(docs)s # This forces the docs extras to install (http://bit.ly/2Qz7fzb)
    ipython>=7.9.0
    matplotlib>=3.1.1
    flake8>=3.7.9
    doc8>=0.8.0
    pytest>=5.2.2
    pytest-asyncio>=0.10.0
    pytest-cov>=2.8.1
    pytest-mock>=1.13.0
    pytest-sugar>=0.9.2
    isort>=4.3.21
    codecov>=2.0.15
    coverage[toml]>=5.0
    ipdb>=0.12.3
    # The following are needed because sdsstools[dev] as an extra not always
    # gets installed. See https://github.com/pypa/pip/issues/4957.
    invoke>=1.3.0
    twine>=3.1.1
    wheel>=0.33.6
docs =
    Sphinx>=2.1.0
    sphinx_bootstrap_theme>=0.4.12

[options.package_data]
lvmsurveysim =
    etc/*

[isort]
line_length = 79
sections =
    FUTURE
    STDLIB
    THIRDPARTY
    SDSS
    FIRSTPARTY
    LOCALFOLDER
default_section = THIRDPARTY
known_first_party = lvmsurveysim
known_sdss_party =
    sdssdb
    sdsstools
balanced_wrapping = true
include_trailing_comma = false
lines_after_imports = 2
use_parentheses = true

[flake8]
ignore =
    H101
    E722
    W504
    W505
per-file-ignores =
    */__init__.py:E,W
max-line-length = 99

[tool:pytest]
addopts = --cov lvmsurveysim --cov-report html -W ignore

[coverage:run]
branch = true
include =
    lvmsurveysim/*
omit =
    */utils/*.py
    */__init__.py

[coverage:report]
exclude_lines =
